[project]
name = "dagster-nomad"
version = "0.0.4"
description = "Dagster integration library for Nomad"
readme = "README.md"
authors = [
    { name = "Bruno Bonfils", email = "asyd@asyd.net" },
    { name = "Thomas Aubry", email = "github.thomaub@gmail.com" },
    { name = "Thomas Berdy", email = "thomas.berdy@outlook.com" },
]
keywords = ["dagster", "nomad", "run launcher"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = ["dagster>=1.9.13", "httpx>=0.24.1"]

[project.urls]
"Homepage" = "https://github.com/paylead/dagster-nomad"
"Repository" = "https://github.com/paylead/dagster-nomad"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
log_cli = true
log_level = "INFO"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | build
  | dist
  )/
'''

[tool.ruff]
line-length = 120
src = ["dagster_nomad", "tests"]
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
    "venv",
]

[tool.lint.isort]
known-first-party = ["dagster_nomad", "tests"]

[tool.pyright]
reportPropertyTypeMismatch = true
reportImportCycles = true
reportWildcardImportFromLibrary = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true

include = ["dagster_nomad`", "tests"]

exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
    "venv",
]
